# asteroid-python-sdk

./: .env.example  .gitignore  README.md  RELEASE.md  pyproject.toml  run.py  run_anthropic.py  run_openai.py  test.py
.github/workflows/: python-ci.yml
examples/: chat_supervision.py  customer_support_demo.py
scripts/: check_commit_message.sh
src/asteroid_sdk/: settings.py
src/asteroid_sdk/api/: api_logger.py  asteroid_chat_supervision_manager.py  logger.py  supervision_runner.py
src/asteroid_sdk/converters/: inspect_ai_converters.py  message_converters.py
src/asteroid_sdk/interaction/: helper.py
src/asteroid_sdk/registration/: helper.py  initialise_project.py
src/asteroid_sdk/supervision/: base_supervisors.py  config.py  decorators.py  supervisors.py
src/asteroid_sdk/wrappers/: anthropic.py  gemini.py  helpers.py  openai.py
src/sentinel/: __init__.py  config.py  settings.py
src/sentinel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sentinel/api/: logger.py
src/sentinel/converters/: inspect_ai_converters.py  message_converters.py
src/sentinel/registration/: helper.py  project.py
src/sentinel/supervision/: common.py  config.py  decorators.py  registry.py  supervisors.py
src/sentinel/utils/: utils.py
src/sentinel/wrappers/: openai.py
tests/: test_openai_wrapper.py
tests/acceptance/: abstract_acceptance_test.py  init_asteroid.py  test_anthropic.py  test_open_ai.py
tests/helper/api/: mock_api.py
tests/helper/supervisors/: allow_all_supervisor.py  depends_on_tool_call_supervisor.py  rejection_supervisor.py
(+9 files in other folders)
